[package]
name = "out123-sys"
version = "0.5.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides bindings to out123."
documentation = "https://docs.rs/out123-sys"
homepage = "https://github.com/stainless-steel/out123-sys"
repository = "https://github.com/stainless-steel/out123-sys"
readme = "README.md"
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["audio", "sound"]
build = "build.rs"
links = "out123"

[features]
static = ["mpg123-sys/static"]

[dependencies]
libc = "0.2"
mpg123-sys = "0.6"

[build-dependencies]
pkg-config = "0.3"
